started my siz webapp

--- a/farming_site/main/templates/main/base.html
+++ b/farming_site/main/templates/main/base.html
@@ -6,8 +6,27 @@ lang="en">
     <title>{% block title %}Farming Site{% endblock %}</title>
     <style>
         body{
-            background-color: rgb(255, 255, 255);
-            background-image: url('https://stock.adobe.com/ke/images/smiling-farm-boy-standing-near-crops-boy-farmer-with-tools-smiling-boy-farmer-smiling-in-sunlight/926211049');
+            background-image: url('https://imgs.search.brave.com/PCUi00Ywrd5Mcs06jUvoKVkuHmEBpx-ox71ff__yGKQ/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9tZWRp/YS5nZXR0eWltYWdl/cy5jb20vaWQvMTQw/NjY4ODI3OS9waG90/by9oYXJ2ZXN0aW5n/LWNvbWJpbmUuanBn/P3M9NjEyeDYxMiZ3/PTAmaz0yMCZjPVBF/NW1VRDAxcnZiVVFC/S0lqZ2k0Z19CS3BY/MjJ0QW9Dekx5WEcy/YjJDVlk9');
+        }
+        h1{
+            text-align: center;
+            color: rgb(35, 62, 151);
+        }
+        h2{
+            text-align: center;
+            color: rgb(100, 6, 6);
+        }
+        footer{
+            text-align: center;
+            color: rgb(31, 16, 16);
+        }
+        form{
+            text-align: center;
+        }
+        .btn{
+            color: #2519d4;
+            border-color: #2519d4;
+
         }
     </style>
 </head>
