--- a/farming_site/main/templates/main/content.html
+++ b/farming_site/main/templates/main/content.html
@@ -1,4 +1,4 @@
-{%extends 'main.base.html'%}
+{%extends 'main/base.html'%}
 
 {%block title%} content page{%endblock%}
 {%block content%} <p>this is where the contents will appear</p>{%endblock%}
