--- a/farming_site/main/templates/main/home.html
+++ b/farming_site/main/templates/main/home.html
@@ -1,4 +1,4 @@
-{%extends 'main.base'%}
+{%extends 'main/base.html'%}
 {%block title%}home page {%endblock%}
 {%block content%}
  <section>
@@ -6,9 +6,9 @@
      <p>we offer good quality services </p>
 
     <form action="">
-        <button type="submit" name="login" value="login">login</button>
+        <button class="btn" type="submit" name="login" value="login">login</button>
         <p>if not yet registed click on singup</p>
-        <button type="submit" name="singup" value="singup">singup</button>
+        <button class="btn" type="submit" name="singup" value="singup">singup</button>
     </form>
  </section>
  <section>
