--- a/farming_site/main/templates/main/base.html
+++ b/farming_site/main/templates/main/base.html
@@ -24,7 +24,7 @@ lang="en">
             text-align: center;
         }
         .btn{
-            color: #2519d4;
+            color: #121213;
             border-color: #2519d4;
 
         }
