--- a/farming_site/main/templates/main/base.html
+++ b/farming_site/main/templates/main/base.html
@@ -1,64 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <Html
 lang="en">
 
 <head>
     <title>{% block title %}Farming Site{% endblock %}</title>
-    <style>
-        body{
-            background-image: url('https://imgs.search.brave.com/PCUi00Ywrd5Mcs06jUvoKVkuHmEBpx-ox71ff__yGKQ/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9tZWRp/YS5nZXR0eWltYWdl/cy5jb20vaWQvMTQw/NjY4ODI3OS9waG90/by9oYXJ2ZXN0aW5n/LWNvbWJpbmUuanBn/P3M9NjEyeDYxMiZ3/PTAmaz0yMCZjPVBF/NW1VRDAxcnZiVVFC/S0lqZ2k0Z19CS3BY/MjJ0QW9Dekx5WEcy/YjJDVlk9');
-        }
-        h1{
-            text-align: center;
-            color: rgb(35, 62, 151);
-        }
-        h2{
-            text-align: center;
-            color: rgb(100, 6, 6);
-        }
-        footer{
-            text-align: center;
-            color: rgb(31, 16, 16);
-        }
-        form{
-            text-align: center;
-        }
-        .btn{
-            color: #121213;
-            border-color: #2519d4;
-
-        }
-        form {
-    width: 50%;
-    margin: 20px auto;
-    padding: 15px;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    background-color: #fff;
-}
-
-form input, form button {
-    display: block;
-    width: 100%;
-    margin-bottom: 10px;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-}
-
-form button {
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    cursor: pointer;
-}
-
-form button:hover {
-    background-color: #45a049;
-}
-
-    </style>
+    <link rel="stylesheet" href="{% static 'sizstyle.css' %}">
 </head>
 <body>
     <header></header>
