--- a/farming_site/main/templates/main/content.html
+++ b/farming_site/main/templates/main/content.html
@@ -6,7 +6,7 @@
     <div class="crop-container">
         {% for crop in crops %}
         <div class="crop-card">
-            <img src="{{ crop.image.url }}" alt="{{ crop.name }}">
+            <img src="{{ crop.image.url }}" alt="an image of a crop">
             <h2>{{ crop.name }}</h2>
             <p>Price: ${{ crop.price }}</p>
         </div>
