--- a/farming_site/main/templates/main/base.html
+++ b/farming_site/main/templates/main/base.html
@@ -6,15 +6,41 @@ lang="en">
 <head>
     <title>{% block title %}Farming Site{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'sizstyle.css' %}">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <header></header>
-    <h1>welcome to esy's Farming</h1>
+    <header class="page-header">
+        <h1>{% block header %} welcome to esy's Farming {% endblock %}</h1>
+    </header>
+    <div class = 'sidebar'>
+        <div class="sidebar-header">
+            <h2>FarmApp</h2>
+        </div>
+        <ul class="sidebar-menu">
+            <li><a href="/home">Home</a></li>
+            <li><a href="/content">Crops</a></li>
+            <li><a href="/dasboard">Dashboard</a></li>
+            <li><a href="/add">Upload</a></li>
+            <li><a href="/login">Login</a></li>
+            <li><a href="/register">Singup</a></li>
+            <li ><a href="/logout">Logout</a></li>
+            
+        </ul>
+     </div>
+     <div class="content">
      <h2>we have the best crops</h2>
-     <div>{% block content %}{% endblock %}</div>
-     <footer>
+     
+     <div>{% block noneuser %}{% endblock %}</div>
+     
+     <div> 
+        
+             {% block content %}{% endblock %}
+    </div>
+     <footer class="page-footer">
         <p>Copyright &copy; 2022</p>
     </footer>
+    </div>
 </body>
 
 </Html>
