--- a/farming_site/main/templates/main/home.html
+++ b/farming_site/main/templates/main/home.html
@@ -7,9 +7,12 @@
 
     <form action="#" method="POST">
          {% csrf_token %}
+         {% if user.is_authenticated %}
         <button class="btn" type="submit" name="login" value="login">login</button>
+        {% else %}
         <p>if not yet registed click on singup</p>
         <button class="btn" type="submit" name="singup" value="singup">singup</button>
+        {% endif %}
     </form>
  </section>
  <section>
