--- a/farming_site/main/templates/main/base.html
+++ b/farming_site/main/templates/main/base.html
@@ -11,7 +11,7 @@ lang="en">
 </head>
 <body>
     <header class="page-header">
-        <h1>{% block header %} welcome to esy's Farming {% endblock %}</h1>
+    <h1>{% block header %} welcome   to esyfarming {{ user.username }} {% endblock %}</h1>
     </header>
      <div class="content">
      <h2>we have the best crops</h2>
